--- a/assets/style/layout/_header.scss
+++ b/assets/style/layout/_header.scss
@@ -7,3 +7,42 @@
     flex-wrap: wrap;
     column-gap: 33px;
 }
+
+@media screen and (min-width: 720px) {
+
+    .menu {
+        column-gap: 75px;
+    }
+
+}
+
+@media screen and (min-width: 1440px) {
+
+    .menu {
+        flex-wrap: nowrap;
+        column-gap: 105px;
+
+        &__item {
+            
+            &:nth-child(1) {
+                order: 1;
+            }
+
+            &:nth-child(2) {
+                order: 3;
+            }
+
+            &:nth-child(3) {
+                order: 4;
+            }
+
+            &:nth-child(4) {
+                order: 5;
+            }
+
+            &:nth-child(5) {
+                order: 2;
+            }
+        }
+    }
+}
