--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -8,6 +8,7 @@
 */
 @import url("https://fonts.googleapis.com/css2?family=Fjalla+One&family=Work+Sans:wght@400;600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Fjalla+One&family=Work+Sans:wght@400;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fjalla+One&family=Work+Sans:wght@400;600&display=swap");
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -492,5 +493,26 @@ img:hover {
   }
   .menu__item:nth-child(5) {
     order: 2;
+  }
+}
+/*COLORS*/
+/*FONTS*/
+.banner {
+  display: grid;
+  gap: 1rem;
+}
+.banner img:nth-child(1) {
+  grid-column: 1/3;
+}
+.banner img:nth-child(4) {
+  grid-area: 2/2/4/3;
+}
+
+@media screen and (min-width: 720px) {
+  .banner img:nth-child(1) {
+    grid-row: 1/3;
+  }
+  .banner img:nth-child(4) {
+    grid-area: 1/4/3/5;
   }
 }/*# sourceMappingURL=style.css.map */
