--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -10,4 +10,7 @@
 
 @import
     './layout/header',
-    './layout/banner';
+    './layout/banner',
+    './layout/categorias',
+    './layout/cards',
+    './layout/footer'
